--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,3 +29,10 @@ jobs:
 
       # run tests!
       - run: gradle test
+  deploy:
+    steps:
+      - checkout
+      - run:
+          name: Deploy Master to Heroku
+          command: |
+            git push https://heroku:bbebbe5a-9c5d-408f-b586-95e4612e0bec@git.heroku.com/twtestepipelinedevops.git master
