--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,15 @@
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
+
 version: 2
 jobs:
   build:
@@ -29,7 +41,9 @@ jobs:
 
       # run tests!
       - run: gradle test
-      
+  deploy:
+    steps:
+      - checkout
       - run:
           name: Deploy Master to Heroku
           command: |
