--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,12 +38,13 @@ jobs:
                 - run:
                         name: Step no 2
                         command: echo "Going to deploy to QA again"
+
 workflows:
         version: 2
         sample_pipeline:
                 jobs:
                         - linting
-                        - unit_test                                
+                        - unit_test
                         - build_artifact:
                                 requires:
                                 - unit_test
@@ -51,6 +52,10 @@ workflows:
                         - deploy_to_dev:
                                 requires:
                                 - build_artifact
-                        - deploy_to_qa:
+                        - hold_for_approval:
+                                type: approval
                                 requires:
                                 - deploy_to_dev
+                        - deploy_to_qa:
+                                requires:
+                                - hold_for_approval
