--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
                         - save_cache:
                                 paths:
                                         - ~/.gradle
-                                        key: v1-dependencies-{{ checksum "build.gradle" }}
+                                key: v1-dependencies-{{ checksum "build.gradle" }}
                         - run: gradle test
         linting:
                 docker:
@@ -41,15 +41,17 @@ jobs:
                         - image: busybox:latest
                 steps:
                         - run:
-                                  name: Deploy to Dev to Heroku
-                                  command: | git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME_DEV.git master
+                                name: Deploy to Dev to Heroku
+                                command: |
+                                  git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME_DEV.git master
         deploy_to_qa:
                 docker:
                         - image: busybox:latest
                 steps:
                         - run:
-                                  name: Deploy to QA to Heroku
-                                  command: command: | git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME_QA.git master
+                                name: Deploy to QA to Heroku
+                                command: |
+                                  git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME_QA.git master
 
 workflows:
         version: 2
