--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
                                   command: echo "Going to run the build artifact"
         deploy_to_dev:
                 docker:
-                        - image: busybox:latest
+                        - image: circleci/openjdk:8-jdk
                 steps:
                         - run:
                                 name: Deploy to Dev to Heroku
@@ -46,7 +46,7 @@ jobs:
                                   git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME_DEV.git master
         deploy_to_qa:
                 docker:
-                        - image: busybox:latest
+                        - image: circleci/openjdk:8-jdk
                 steps:
                         - run:
                                 name: Deploy to QA to Heroku
@@ -55,7 +55,7 @@ jobs:
 
 workflows:
         version: 2
-        sample_pipeline:
+        pipeline:
                 jobs:
                         - linting
                         - unit_test
