--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,13 +22,23 @@ jobs:
                                         - ~/.gradle
                                 key: v1-dependencies-{{ checksum "build.gradle" }}
                         - run: gradle test
+                        - run:
+                                name: Save test results
+                                command: |
+                                 mkdir -p ~/test-results/junit/
+                                 find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/test-results/junit/ \;
+                                when: always
+                        - store_test_results:
+                                path: ~/test-results
+                        - store_artifacts:
+                                path: ~/test-results/junit 
         linting:
                 docker:
                         - image: busybox:latest
                 steps:
                         - run:
                                   name: Lint Test
-                                  command: echo "Going to run Lint Test"
+                                  command: echo "Going to run Lint Test SonarQube"
         build_artifact:
                 docker:
                         - image: busybox:latest
